# py_spotweb

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.toml  docker-compose.yml  pyproject.toml
src/: config.py
src/api/: formatting.py  main.py  newznab.py  nntp.py  nzb.py  routes.py
src/api/templates/: base.html  release_detail.html  search_ui.html
src/db/: conn.py  schema.sql
src/matcher/: main.py  title.py  tmdb.py
src/scanner/: categories.py  main.py  nntp.py  signing.py  spotnet.py
